GNOME Bugzilla – Bug 756450
[Paper cut] GTK file chooser completion dropdown sets cursor in wrong position
Last modified: 2016-03-13 08:34:59 UTC
This bug is a stability bug that i have found in gtk 3.14 to 3.18, but it is probably present in releases before. When you type something in the location bar in the file chooser you get completion via a dropdown menu. If you choose an item of the menu your text/path is successfully completed. But here comes the annoying usability bug for keyboard heavy users. After the completion is done, your cursor is set to the beginning of the location bar. Instead the cursor should be placed at the end of the location bar. This way you can add files or folders, or maybe remove/alter the just completed text because you realised that you choose the wrong thing. I have made a video for this. I am not sure if it is helpful, but i hope it makes it easier to understand this problem. (It is quite large, because the Gnome Shell recording feature only records everything.) https://imgrush.com/x-a6ZAP0f7g0
Thanks; this makes things much nicer. Fixed in gtk-2-24, gtk-3-18, and master. The relevant commit in master is edacd5d6ee89eac30891030edbb70c746bfe2fe4.
Thank you very much for fixing. Have a nice weekend!