GtkFileChooserEntry: move the cursor after the user chooses a completion from the list

https://bugzilla.gnome.org/show_bug.cgi?id=756450